--- a/QLPhongMachTuWPF/View/Diagnosis.xaml
+++ b/QLPhongMachTuWPF/View/Diagnosis.xaml
@@ -18,13 +18,13 @@
 
     <Grid Background="White">
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
+           
             <RowDefinition Height="*"/>
+            <RowDefinition Height="7*"/>
 
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0" Width="250" HorizontalAlignment="Left" Margin="100 30 400 35" >
+        <Grid Grid.Row="0" Width="250" HorizontalAlignment="Left" Margin="100,10 0 15" >
             <Border BorderThickness="2" CornerRadius="5" BorderBrush="Black" Height="30" >
                 <DatePicker Background="#eeeeee" FontSize="16" Margin="8,0,8,0" />
             </Border>
@@ -53,12 +53,19 @@
                 <DataGridTextColumn Header="Symptom" ElementStyle="{StaticResource textBlockDatagrid}" IsReadOnly="True" CanUserResize="False" Width="2*" Binding="{Binding TrieuChung, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                 <DataGridTextColumn Header ="Result" ElementStyle="{StaticResource textBlockDatagrid}" IsReadOnly="True" CanUserResize="False" Width="*" Binding="{Binding KetQua, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                 <DataGridTextColumn Header="Status" Binding="{Binding TrangThai, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ElementStyle="{StaticResource textBlockDatagrid}" IsReadOnly="True" CanUserResize="False" Width="1*" />
-                <DataGridTemplateColumn Header="" Width="1*" CanUserResize="False">
+                <DataGridTemplateColumn Header="" Width="1.5*" CanUserResize="False">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
+
+                                <Button   Command="{Binding DataContext.ModifyDiagnosis, RelativeSource={RelativeSource AncestorType=DataGrid}}"
+Style="{StaticResource EditButton}" >
+                                    <materialDesign:PackIcon Kind="Pencil" Width="20" Height="20" Foreground="White" />
+
+                                </Button>
+
                                 <!--Button Check-->
-                                <Button 
+                                <Button Margin="5 0 0 0"
                                      Command="{Binding DataContext.ModifyDiagnosis, RelativeSource={RelativeSource AncestorType=DataGrid}}"
                                         CommandParameter="{Binding}"
                                     Style="{StaticResource gridRemoveBtn}" Background="Green">
@@ -81,11 +88,7 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <Button Grid.Row="0" Command="{Binding ModifyDiagnosis}"  Style="{StaticResource anotherAddBtn}">
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Modify diagnosis" FontSize="15" FontWeight="Bold"/>
-            </StackPanel>
-        </Button>
+        
 
     </Grid>
 
