--- a/QLPhongMachTuWPF/View/Invoice.xaml
+++ b/QLPhongMachTuWPF/View/Invoice.xaml
@@ -17,13 +17,13 @@
 
     <Grid Background="White">
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
+           
             <RowDefinition Height="*"/>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="7*"/>
+            
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0" Width="250" HorizontalAlignment="Left" Margin="100 30 400 35" >
+        <Grid Grid.Row="0" Width="250" HorizontalAlignment="Left" Margin="100,10 0 15" >
             <Border BorderThickness="2" CornerRadius="5" BorderBrush="Black" Height="30" >
                 <DatePicker Background="#eeeeee" FontSize="16" Margin="8,0,8,0" />
             </Border>
@@ -75,11 +75,16 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
+                                <Button   Command="{Binding DataContext.ModifyInvoice, RelativeSource={RelativeSource AncestorType=DataGrid}}"
+Style="{StaticResource EditButton}" >
+                                    <materialDesign:PackIcon Kind="Pencil" Width="20" Height="20" Foreground="White" />
 
-                                <Button
+                                </Button>
+
+                                <Button 
                                   Command="{Binding DataContext.VerifyCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
                                   CommandParameter="{Binding}"
-                                  x:Name="btnVerify" Style="{StaticResource gridRemoveBtn}" Background="Green" Margin="0 0 5 0">             
+                                  x:Name="btnVerify" Style="{StaticResource CheckButton}" Margin="5 0 5 0">             
                                     <materialDesign:PackIcon Kind="CheckBold" Width="20" Height="20" Foreground="White"/>
                                 </Button>
                                 <Button 
