--- a/QLPhongMachTuWPF/View/Lists.xaml
+++ b/QLPhongMachTuWPF/View/Lists.xaml
@@ -17,16 +17,13 @@
 
     <Grid Background="White">
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-
-
-
-            <RowDefinition Height="auto"/>
+           
             <RowDefinition Height="*"/>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="7*"/>
+           
         </Grid.RowDefinitions>
-        
-        <Grid Grid.Row="0" Width="250" HorizontalAlignment="Left" Margin="100 30 400 35">
+
+        <Grid Grid.Row="0" Width="250" HorizontalAlignment="Left" Margin="100,10 0 15">
             <TextBlock Margin="20,0,30,0" VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False"
    Panel.ZIndex="1" Text="Search" Visibility="{Binding ElementName=txtSearch, Path=Text.IsEmpty,Converter={StaticResource BoolToVis}}" FontSize="20"/>
 
@@ -81,9 +78,13 @@
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
 
+                                <Button   Command="{Binding DataContext.ModifyMedicineCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
+Style="{StaticResource EditButton}" >
+                                    <materialDesign:PackIcon Kind="Pencil" Width="20" Height="20" Foreground="White" />
 
+                                </Button>
                                
-                                <Button 
+                                <Button  Margin="5 0 0 0"
                                      Command="{Binding DataContext.DeleteMedicineCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
     CommandParameter="{Binding}"
                                     Style="{StaticResource gridRemoveBtn}">
@@ -97,11 +98,7 @@
 
             </DataGrid.Columns>
         </DataGrid>
-        <Button  Command="{Binding ModifyMedicineCommand}" Grid.Row="0"   Style="{StaticResource anotherAddBtn}" >
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Modify Medicine" FontSize="15" FontWeight="Bold"/>
-            </StackPanel>
-        </Button>
+       
 
 
     </Grid>
