--- a/QLPhongMachTuWPF/View/ManageAppointments.xaml
+++ b/QLPhongMachTuWPF/View/ManageAppointments.xaml
@@ -17,16 +17,13 @@
 
     <Grid Background="White">
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-
-
-
-            <RowDefinition Height="auto"/>
+            
             <RowDefinition Height="*"/>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="7*"/>
+            
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0" Width="250" HorizontalAlignment="Left" Margin="100 30 400 35" >
+        <Grid Grid.Row="0" Width="250" HorizontalAlignment="Left" Margin="100,10 0 15" >
             <Border BorderThickness="2" CornerRadius="5" BorderBrush="Black" Height="30" >
                 <DatePicker Background="#eeeeee" FontSize="16" Margin="8,0,8,0" />
             </Border>
@@ -51,20 +48,26 @@
                 <DataGridTextColumn Header="Patient ID" Binding="{Binding MaBN, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ElementStyle="{StaticResource textBlockDatagrid}" IsReadOnly="True" CanUserResize="False" Width="2*" />
                 <DataGridTextColumn Header="Due date" Binding="{Binding NgayHen, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, StringFormat='dd/MM/yyyy'}"  ElementStyle="{StaticResource textBlockDatagrid}" IsReadOnly="True" CanUserResize="False"  Width="1.5*" />
                 <DataGridTextColumn Header="Hours" Binding="{Binding GioHen, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ElementStyle="{StaticResource textBlockDatagrid}" IsReadOnly="True" CanUserResize="False" Width="1.5*" />
-                <DataGridTemplateColumn Header="" Width="1*" CanUserResize="False">
+                <DataGridTemplateColumn Header="" Width="1.5*" CanUserResize="False">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <Button
+                                <Button   Command="{Binding DataContext.ModifyAppointmentCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
+Style="{StaticResource EditButton}" >
+                                    <materialDesign:PackIcon Kind="Pencil" Width="20" Height="20" Foreground="White" />
+
+                                </Button>
+
+                                <Button Margin="5 0 0 0 "
                                     Command="{Binding DataContext.VerifyCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
                                     CommandParameter="{Binding}"
-                                    x:Name="btnVerify" Style="{StaticResource gridRemoveBtn}" Background="Green">
+                                    x:Name="btnVerify" Style="{StaticResource CheckButton}" >
                                     <materialDesign:PackIcon Kind="CheckBold" Width="20" Height="20" Foreground="White"/>
                                 </Button>
                                 <Button 
                                      Command="{Binding DataContext.DeleteAppointmentCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
                                     CommandParameter="{Binding}"
-                                    Style="{StaticResource gridRemoveBtn}" Background="Red" Margin="5 0 0 0 ">
+                                    Style="{StaticResource gridRemoveBtn}"  Margin="5 0 0 0 ">
                                     <materialDesign:PackIcon Kind="TrashCan" Width="20" Height="20" Foreground="White" />
                                 </Button>
                             </StackPanel>
@@ -74,10 +77,6 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <Button Command="{Binding ModifyAppointmentCommand}" Grid.Row="0"   Style="{StaticResource anotherAddBtn}" >
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Modify Appointment" FontSize="15" FontWeight="Bold"/>
-            </StackPanel>
-        </Button>
+       
     </Grid>
 </UserControl>
