--- a/QLPhongMachTuWPF/View/Staffs.xaml
+++ b/QLPhongMachTuWPF/View/Staffs.xaml
@@ -16,13 +16,13 @@
 
     <Grid Background="White">
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
+            
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="auto"/>
+            
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0" Width="250" HorizontalAlignment="Left" Margin="100 30 400 35">
+        <Grid Grid.Row="0" Width="250" HorizontalAlignment="Left" Margin="100,10 0 15">
             <TextBlock Margin="20,0,30,0" VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False"
    Panel.ZIndex="1" Text="Search" Visibility="{Binding ElementName=txtSearch, Path=Text.IsEmpty,Converter={StaticResource BoolToVis}}" FontSize="20"/>
         <!--Search-->
@@ -82,9 +82,15 @@
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
 
+                                <Button   Command="{Binding DataContext.ModifyStaffsCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
+Style="{StaticResource EditButton}" >
+                                    <materialDesign:PackIcon Kind="Pencil" Width="20" Height="20" Foreground="White" />
 
+                                </Button>
                                 
                                 <Button 
+                                    
+                                    Margin="5 0 0 0"
                                      Command="{Binding DataContext.DeleteStaffCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
                                     CommandParameter="{Binding}"
                                     Style="{StaticResource gridRemoveBtn}">
@@ -97,12 +103,7 @@
                
             </DataGrid.Columns>
         </DataGrid>
-        <Button Command="{Binding ModifyStaffsCommand }" Grid.Row="0"  Style="{StaticResource anotherAddBtn}"  >
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Modify Staff" FontSize="15" FontWeight="Bold"/>
-            </StackPanel>
-        </Button>
-
+        
 
     </Grid>
 </UserControl>
