--- a/QLPhongMachTuWPF/View/LoginModel.xaml
+++ b/QLPhongMachTuWPF/View/LoginModel.xaml
@@ -109,7 +109,7 @@
                     </Grid>
                 </Border>
 
-                <Border BorderBrush="#abc0af" BorderThickness="1" Margin="10 10" CornerRadius="5">
+                <Border BorderBrush="#abc0af" BorderThickness="1" Margin="10 10 10 0" CornerRadius="5">
                     <Grid Margin="7 9">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="auto"/>
@@ -143,6 +143,16 @@
 
                     </Grid>
                 </Border>
+                <Button
+                Content="Forgot password?" 
+                FontSize="10"  Background="Transparent" 
+                Foreground="#1d6fc1" HorizontalAlignment="Center" Height="23"
+                Margin="0 0 -300 0"
+                 Command="{Binding RegisterCommand}"
+                 CommandParameter="{Binding ElementName=FormLogin}"
+                 Style="{StaticResource MaterialDesignRaisedButton}"
+                BorderBrush="Transparent"
+                ></Button>
 
                 <Button x:Name="btnLogin" Background="#1d6fc1"
                     Command="{Binding LoginCommand}"
@@ -154,7 +164,9 @@
                         Foreground="White" Margin="0 10">
                     LOG IN
                 </Button>
- 
+
+
+                
 
                 <TextBlock Text="Not registered? " FontSize="12" HorizontalAlignment="Center" Margin="0 0 100 0"></TextBlock>
                 <Button
