full function ForgotPassword

--- a/QLPhongMachTuWPF/ResourceXAML/MainResource.xaml
+++ b/QLPhongMachTuWPF/ResourceXAML/MainResource.xaml
@@ -28,5 +28,7 @@
     <viewmodel:RegisterVM x:Key="RegisterVM"></viewmodel:RegisterVM>
     <viewmodel:ModifyDetailInvoiceVM x:Key="ModifyDetailInvoiceVM"></viewmodel:ModifyDetailInvoiceVM>
     <viewmodel:ForgotPassword x:Key="ForgotPassword"></viewmodel:ForgotPassword>
+    <viewmodel:ConfirmationVM x:Key="ConfirmationVM"></viewmodel:ConfirmationVM>
+    <viewmodel:ResetPasswordVM x:Key="ResetPasswordVM" ></viewmodel:ResetPasswordVM>
 </ResourceDictionary> 
     
