--- a/QLPhongMachTuWPF/View/ForgotPass.xaml
+++ b/QLPhongMachTuWPF/View/ForgotPass.xaml
@@ -7,13 +7,17 @@
         mc:Ignorable="d"
         DataContext="{StaticResource ForgotPassword}"
         Title="ForgotPass" Height="450" Width="500"
+        Name="forgotpass"
         WindowStartupLocation="CenterScreen" WindowStyle="None" AllowsTransparency="True" Background="Transparent">
     <Grid>
         <Grid.ColumnDefinitions>
 
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Button x:Name="btnClose"
+        <Button
+            Command="{Binding CloseCommand}"
+            CommandParameter="{Binding ElementName=forgotpass}"
+            x:Name="btnClose"
      BorderBrush="White"
     Grid.Column="1" Panel.ZIndex="1"
        Width="30"
@@ -104,8 +108,8 @@
 
 
                 <Button x:Name="btnLogin" Background="#1d6fc1"
-                Command="{Binding ResetPassword}"
-    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"
+                Command="{Binding SendOtpCommand}"
+    CommandParameter="{Binding ElementName=forgotpass}"
                 Style="{StaticResource MaterialDesignRaisedButton}"
                 Width="170"
                Click="Button_Click"
