--- a/QLPhongMachTuWPF/View/ResetPass.xaml
+++ b/QLPhongMachTuWPF/View/ResetPass.xaml
@@ -3,8 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:QLPhongMachTuWPF.View"
+        xmlns:local="clr-namespace:QLPhongMachTuWPF.View" xmlns:viewmodel="clr-namespace:QLPhongMachTuWPF.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:ResetPasswordVM}"
         mc:Ignorable="d"
+        Name ="ResetPassword"
+        DataContext="{StaticResource ResetPasswordVM}"
         Title="ResetPass" Height="450" Width="500"
         WindowStartupLocation="CenterScreen" WindowStyle="None" AllowsTransparency="True" Background="Transparent">
     <Grid>
@@ -12,7 +14,10 @@
 
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Button x:Name="btnClose"
+        <Button
+            Command="{Binding CloseCommand}"
+            CommandParameter="{Binding ElementName=ResetPassword}"
+            x:Name="btnClose"
      BorderBrush="White"
     Grid.Column="1" Panel.ZIndex="1"
        Width="30"
@@ -20,7 +25,7 @@
        VerticalAlignment="Top"
        HorizontalAlignment="Right"
        Margin="0 13 13 0"
-       Click="btnClose_Click"
+      
         BorderThickness="0">
             <Button.Background >
                 <ImageBrush ImageSource="/Images/image.png"
@@ -44,37 +49,33 @@
 
                
                 <!-- Password Input -->
-                <Border BorderBrush="#abc0af" BorderThickness="1" Width="300" Margin="0 0 0 15" HorizontalAlignment="Center" VerticalAlignment="Center" CornerRadius="5">
+                <Border BorderBrush="#abc0af" BorderThickness="1" HorizontalAlignment="Center" Margin="0 0 0 15" VerticalAlignment="Center" CornerRadius="5">
                     <Grid Margin="7 9">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="284"/>
                         </Grid.ColumnDefinitions>
 
-                        <TextBlock x:Name="textPassword"  MouseDown="textPassword_MouseDown" 
-                               Text="Password"  FontSize="14"
+                        <TextBlock
+                            x:Name="textPassword" 
+                                 FontSize="14"
                             Grid.Column="1"
                             Panel.ZIndex="1"
                             Margin="10 0 0 0"
-                            Foreground="#696969"/>
-                        <PasswordBox x:Name="txtPass"  FontSize="14"
-                            Grid.Column="1"
-                            Margin="10 0 0 0"
-                            Foreground="Black"
-                            BorderBrush="Transparent"
-                            BorderThickness="0"
-                            
-                            KeyDown="PasswordBox_KeyDown">
-                            <!--<i:Interaction.Triggers >
-                                <i:EventTrigger EventName="PasswordChanged">
-                                    <i:InvokeCommandAction Command="{Binding PasswordChangedCommand}" 
-                        CommandParameter="{Binding ElementName=txtPass}">
+                            Foreground="#696969"
+                              
+                               />
+                        <TextBox
+                            Text="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            x:Name="txtPass" 
+                         FontSize="14"
+                         Grid.Column="1"
+                         Margin="10 0 0 0"
+                         Foreground="Black"
+                         BorderBrush="Transparent"
+                         BorderThickness="0">
 
-                                    </i:InvokeCommandAction>
-                                </i:EventTrigger>
-                            </i:Interaction.Triggers>-->
-                        </PasswordBox>
-
+                        </TextBox>
                     </Grid>
                 </Border>
 
@@ -86,34 +87,32 @@
                             <ColumnDefinition Width="284"/>
                         </Grid.ColumnDefinitions>
 
-                        <TextBlock x:Name="textconfirmPassword" 
-                               Text="Confirm Password"  FontSize="14"
+                        <TextBlock
+                            x:Name="textconfirmPassword" 
+                                 FontSize="14"
                             Grid.Column="1"
                             Panel.ZIndex="1"
                             Margin="10 0 0 0"
                             Foreground="#696969"
                               
                                />
-                        <PasswordBox x:Name="txtConfirmPass" 
+                        <TextBox
+                            Text="{Binding ConfirmPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            x:Name="txtConfirmPass" 
                          FontSize="14"
                          Grid.Column="1"
                          Margin="10 0 0 0"
                          Foreground="Black"
                          BorderBrush="Transparent"
                          BorderThickness="0">
-                            <!--<i:Interaction.Triggers>
-                                <i:EventTrigger EventName="PasswordChanged">
-                                    <i:InvokeCommandAction Command="{Binding PasswordConfirmChangedCommand}" 
-                               CommandParameter="{Binding ElementName=txtConfirmPass}" />
-                                </i:EventTrigger>
-                            </i:Interaction.Triggers>-->
-                        </PasswordBox>
+                          
+                        </TextBox>
                     </Grid>
                 </Border>
 
                 <Button x:Name="btnLogin" Background="#1d6fc1"
-                Command="{Binding RegisterCommand}"
-    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"
+                Command="{Binding DoneCommand}"
+    CommandParameter="{Binding ElementName=ResetPassword}"
                 Style="{StaticResource MaterialDesignRaisedButton}"
                 Width="170"
                Click="Button_Click"
