--- a/QLPhongMachTuWPF/View/Register.xaml
+++ b/QLPhongMachTuWPF/View/Register.xaml
@@ -118,7 +118,7 @@
                Margin="10,0,0,0"
                Foreground="#696969" Grid.ColumnSpan="2"/>
                         <TextBox
-             
+             Text="{Binding Email, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
              FontSize="14"
              Grid.Column="1"
              
