--- a/QLPhongMachTuWPF/View/Register.xaml
+++ b/QLPhongMachTuWPF/View/Register.xaml
@@ -111,13 +111,13 @@
                             <ColumnDefinition Width="19*"/>
                         </Grid.ColumnDefinitions>
 
-                        <TextBlock   Text="Email" 
+                        <TextBlock   Text="Email" x:Name="textEmail" MouseDown="textEmail_MouseDown"
                FontSize="14"
                Grid.Column="1"
                Panel.ZIndex="1"
                Margin="10,0,0,0"
                Foreground="#696969" Grid.ColumnSpan="2"/>
-                        <TextBox
+                        <TextBox x:Name="txtEmail" TextChanged="txtEmail_TextChanged"
              
              FontSize="14"
              Grid.Column="1"
