--- a/QLPhongMachTuWPF/View/Lists.xaml
+++ b/QLPhongMachTuWPF/View/Lists.xaml
@@ -35,7 +35,7 @@
             <Image Source="/Images/search.png" Width="20" Height="20" HorizontalAlignment="Right" Margin="5"/>
         </Grid>
 
-        <Button Command="{Binding AddMedicineCommand}" Grid.Row="0"   Style="{StaticResource addBtn}" >
+        <Button Command="{Binding AddMedicineCommand}" Grid.Row="0"   Style="{StaticResource addBtn}" Margin="0 0 120 0" >
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Add Medicine" FontSize="15" FontWeight="Bold"/>
             </StackPanel>
