--- a/QLPhongMachTuWPF/View/Patients.xaml
+++ b/QLPhongMachTuWPF/View/Patients.xaml
@@ -42,7 +42,7 @@
             <Image Source="/Images/search.png" Width="20" Height="20" HorizontalAlignment="Right" Margin="5"/>
         </Grid>
 
-        <Button Grid.Row="0" Command="{ Binding AddPatientCommand }"  Style="{StaticResource addBtn}" >
+        <Button Grid.Row="0" Command="{ Binding AddPatientCommand }"  Style="{StaticResource addBtn}" Margin="0 0 120 0">
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Add Patient" FontSize="15" FontWeight="Bold"/>
             </StackPanel>
