--- a/QLPhongMachTuWPF/View/Staffs.xaml
+++ b/QLPhongMachTuWPF/View/Staffs.xaml
@@ -32,7 +32,7 @@
             <Image Source="/Images/search.png" Width="20" Height="20" HorizontalAlignment="Right" Margin="5"/>
         </Grid>
 
-        <Button Command="{Binding AddStaffCommand}" Grid.Row="0" Style="{StaticResource addBtn}"  >
+        <Button Command="{Binding AddStaffCommand}" Grid.Row="0" Style="{StaticResource addBtn}" Margin="0 0 120 0" >
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Add Staff" FontSize="15" FontWeight="Bold"/>
             </StackPanel>
