--- a/QLPhongMachTuWPF/View/Register.xaml
+++ b/QLPhongMachTuWPF/View/Register.xaml
@@ -14,7 +14,10 @@
            
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Button x:Name="btnClose"
+        <Button
+            Command="{Binding CloseCommand}"
+            CommandParameter="{Binding ElementName=FormRegister}"
+            x:Name="btnClose"
          BorderBrush="White"
         Grid.Column="1" Panel.ZIndex="1"
            Width="30"
@@ -22,7 +25,6 @@
            VerticalAlignment="Top"
            HorizontalAlignment="Right"
            Margin="0 13 13 0"
-           Click="btnClose_Click"
             BorderThickness="0">
             <Button.Background >
                 <ImageBrush ImageSource="/Images/image.png"
