--- a/QLPhongMachTuWPF/View/Invoice.xaml
+++ b/QLPhongMachTuWPF/View/Invoice.xaml
@@ -117,11 +117,28 @@
     Width="auto" Height="auto" VerticalScrollBarVisibility="Auto">
 
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Invoice ID" IsReadOnly="True" CanUserResize="False" Width="1*" Binding="{Binding MaHD, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <DataGridTextColumn Header="Exam form ID" IsReadOnly="True" CanUserResize="False" Width="1*" Binding="{Binding MaPK, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                <DataGridTextColumn Header="Examination fee" IsReadOnly="True"  ElementStyle="{StaticResource textBlockDatagrid}" CanUserResize="False" Width="1.5*" Binding="{Binding TienKham, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                <DataGridTextColumn Header="Pharmancy fee" ElementStyle="{StaticResource textBlockDatagrid}" IsReadOnly="True" CanUserResize="False" Width="1.5*" Binding="{Binding TienThuoc, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                <DataGridTextColumn Header="Total fee"  ElementStyle="{StaticResource textBlockDatagrid}" IsReadOnly="True" CanUserResize="False" Width="1.5*" Binding="{Binding TongTien, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <DataGridTextColumn Header="ID" IsReadOnly="True" CanUserResize="False" Width="1*" Binding="{Binding MaHD, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <DataGridTextColumn Header="Exam ID" IsReadOnly="True" CanUserResize="False" Width="1*" Binding="{Binding MaPK, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <DataGridTextColumn Header="Examination fee" 
+                    IsReadOnly="True"  
+                    ElementStyle="{StaticResource textBlockDatagrid}" 
+                    CanUserResize="False" 
+                    Width="1.5*" 
+                    Binding="{Binding TienKham, StringFormat='{}{0:#,##0 ₫}', Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+
+                <DataGridTextColumn Header="Pharmacy fee" 
+                    IsReadOnly="True"  
+                    ElementStyle="{StaticResource textBlockDatagrid}" 
+                    CanUserResize="False" 
+                    Width="1.5*" 
+                    Binding="{Binding TienThuoc, StringFormat='{}{0:#,##0 ₫}', Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+
+                <DataGridTextColumn Header="Total fee"  
+                    IsReadOnly="True"  
+                    ElementStyle="{StaticResource textBlockDatagrid}" 
+                    CanUserResize="False" 
+                    Width="1.5*" 
+                    Binding="{Binding TongTien, StringFormat='{}{0:#,##0 ₫}', Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 <DataGridTextColumn Header="Date" IsReadOnly="True" CanUserResize="False" Width="1.5*" Binding="{Binding NgayHD, StringFormat='dd/MM/yyyy', Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
                 <DataGridTemplateColumn Header="Status" CanUserResize="False" Width="1*">
